@startuml serwisy

class "SerwisUzytkownikow" as SUZY {
    +zablokujUzytkownika(int,int,Date):void
    +stworzUzytkownika(String,String,String,String,String):Uzytkownik
    +zmienDaneUzytkownika(String, String):void
}

class "SerwisKatalogu" as SKAT {
    +dodajEtykiete(String,String,int):Etykieta
    +dodajKategorie(String,double,double,double,double):Kategoria
    +dodajSprzet(int):Sprzet
    +zmienEtykiete(String,String):void
    +zmienKategorie(String,String):void
    +zmienSprzet(String,String):void
}

class "SerwisPlatnosci" as SPLA {
    +oplacWypozycenie(int,int,double):boolean
}

class "SerwisWypozyczen" as SWYP{
    +rezerwujSprzet(int,int,Date,Date):boolean
    +wypozycSprzet(int,int,Date,Date):Wypozycenie
}

class "SerwisWnioskow" as SWNI{
    +rozpatrzWniosek(int,WniosekStatus):WiosekStatus
    +zlozWniosek(int,int,Date)
}

class "SerwisWydania" as SWYD{
    +wydajSprzet(int):void
    +zlecSerwisSprzetu(int,ZlecenieStatus):Zlecenie
}


    class "BazaDanych" as BAD {
		- uprawnienia : Map<Integer, Uprawnienie>
		- kategorie : Map<Integer,Kategoria>
		- etykiety : Map<Integer,Etykieta>
		- sprzety : Map<Integer,Sprzety>
		- wypozycenia : Map<Integer,Wypozycenie>
		- uzytkownicy : Map<Integer,Uzytkownik>
		- platnosci : Map<Integer,Platnosc>
		- wnioski : Map<Integer,Wniosek>
		- zlecenia : Map<Integer,Zlecenie>
		+ getUprawnienie(int):Uprawnienie
		+ getKategoria(int):Kategoria
		+ getEtykieta(int):Etykieta
		+ getSprzet(int):Sprzet
		+ getWypozycenie(int):Wypozycenie
		+ getUzytkownik(int):Uzytkownik
		+ getPlatnosc(int):Platnosc
		+ getWniosek(int):Wniosek
		+ getZlecenie(int):Zlecenie
		+ addKategoria(Kategora):void
		+ addEtykieta(Etykieta):void
		+ addSprzet(Sprzet):void
		+ addWypozycenie(Wypozycenie):void
		+ addUzytkownik(Uzytkownik):void
		+ addPlatnosc(Platnosc):void
		+ addWniosek(Platnosc):void
		+ addZlecenie(Zlecenie):void
		+ zapisDoPliku() : void
		+ odczytajZPliku() : void
	}

    class "Uzytkownik" as UZY {
		- id : int
		- imie : String
		- nazwisko : String
		- dokument : String
		- email : String
		- haslo : String
		- nrTel : Optional<String>
		- adres : Optional<String>
		- blokada : Optional<Date>
		- wypozyczenia : Set<Wypozyczenie>
		- platnosci : Set<Platnosc>
		- wnioski : Set<Wniosek>
		- Uzytkownik(String, String, String, String, String, String, String)
		+ sprawdzHaslo(String) : boolean
		+ zablokuj(Date) : void
		+ oplac(Wypozyczenie, double) : void
		+ wezId():int
		+ wezImie():String
		+ wezNazwisko():String
		+ wezDokument() : String
		+ wezEmail() : String
		+ wezNrTelLubNull() : String
		+ wezAdresLubNull() : String
		+ wezDane():String
		+ wezBlokadeLubNull():Date
		+ wezWypozyczenia():Set<Wypozyczenie>
		+ wezPlatnosci():Set<Platnosc>
		+ wezWnioski():Set<Wniosek>
		+ ustawImie(String):void
		+ ustawNazwisko(String):void
		+ ustawDokument(String):void
		+ ustawEmail(String):void
		+ ustawHaslo(String):void
		+ ustawNrTel(String):void
		+ ustawAdres(String):void
		+ ustawBlokade(Date):void
		+ wypozyc(Date, Date, Sprzet) : void
		+ rezerwuj(Date, Date, Sprzet) : void
	}

    class "Etykieta" as ETY {
		- id : int
		- nazwa : String
		- opis : String
		- kategoria : Kategoria
		- sprzety : Set<Sprzet>
		- cenaZaDzien : double
		- cenaZaWyporzyczenie : double 
		- cenaZaOpoznienie : double
		- cenaZaOpoznienieZaDzien : double
		+ Etykieta(String, String, Kategoria)
		+ wezId():int
		+ wezNazwa():String
		+ wezOpis():String
		+ wezKategoria():Kategoria
		+ wezSprzety():Set<Sprzet>
		+ wezCenaZaDzien():double
		+ wezCenaZaWypozyczenie():double
		+ wezCenaZaOpoznienie():double
		+ wezCenaZaOpoznienieZaDzien():double
		+ ustawNazwa(String):void
		+ ustawOpis(String):void
		+ ustawKategoria(Kategoria):void
		+ ustawCeneZaDzien(double) : void
		+ ustawCeneZaWyporzyczenie(double) : void
		+ ustawCeneZaOpoznienie(double) : void
		+ ustawCeneZaOpoznienieZaDzien(double) : void
	}

	class "Kategoria" as KAT {
		- id : int
		- nazwa : String
		- etykiety : Set<Etykieta>
		- cenaZaDzien : double
		- cenaZaWyporzyczenie : double
		- cenaZaOpoznienie : double
		- cenaZaOpoznienieZaDzien : double
		+ Kategoia(String)
		+ wezId():int
		+ wezNazwa():String
		+ wezEtykiety():Set<Etykieta>
		+ wezCenaZaDzien():double
		+ wezCenaZaWypozyczenie():double
		+ wezCenaZaOpoznienie():double
		+ wezCenaZaOpoznienieZaDzien():double
		+ ustawNazwa(String):void
		+ ustawCeneZaDzien(double) : void
		+ ustawCeneZaWyporzyczenie(double) : void
		+ ustawCeneZaOpoznienie(double) : void
		+ ustawCeneZaOpoznienieZaDzien(double) : void
	}

	class "Sprzet" as SPR {
		- id : int
		- dniEksploatacji : int
		- etykieta : Etykieta
		- status : SprzetStatus
		- wypozyczenie : Optional<Wypozyczenie>
		- rezerwacje : Set<Wypozyczenie>
		- {static} domyslnaCenaZaDzien : double
		- {static} domyslnaCenaZaWyporzyczenie : double
		- {static} domyslnaCenaZaOpoznienie : double
		- {static} domyslnaCenaZaOpoznienieZaDzien : double
		+ Sprzet(Etykieta)
		+ wezId():int
		+ wezDniEksploatacji():int
		+ wezEtykieta():Etykieta
		+ wezStatus():SprzetStatus
		+ wezWypozyczenieLubNull():Wypozyczenie
		+ wezRezerwacje():Set<Wypozyczenie>
		+ {static} wezDomyslnaCeneZaDzien():double
		+ {static} wezDomyslnaCeneZaWyporzyczenie() : double
		+ {static} wezDomyslnaCeneZaOpoznienie() : double
		+ {static} wezDomyslnaCeneZaOpoznienieZaDzien() : double
		+ ustawStatus(SprzetStatus):void
		+ rozpocznijWypozyczenie(Wypozyczenie):void
		+ rozpocznijWypozyczenie():void
		+ zakoncWypozyczenie():void
		+ dodajRezerwacje(Wypozyczenie):void
		+ {static} ustawDomyslnaCeneZaDzien():double
		+ {static} ustawDomyslnaCeneZaWyporzyczenie() : double
		+ {static} ustawDomyslnaCeneZaOpoznienie() : double
		+ {static} ustawDomyslnaCeneZaOpoznienieZaDzien() : double
		- eksploatuj(int)
		- czyMoznaWypozyczyc(Wypozyczenie):boolean
	}

	class "Platnosc" as PLA {
		- id : int
		- data : Date
		- wypozyczenie : Wypozyczenie
		- kwota : double
		+ Platnosc(Date, Wypozyczenie, double)
		+ wezId():int
		+ wezDate():Date
		+ wezWypozycenie():Wypozyczenie
		+ wezKwota():double
		+ wezDane():String
	}

	class "Wypozyczenie" as WYP {
		- id : int
		- start : Date
		- end : Date
		- wplacono : double
		- doZaplaty : double
		- sprzet : Sprzet
		- uzytkownik : Uzytkownik
		- status : WypozyczenieStatus
		+ Wypozyczenie(Date, Date, Sprzet, Uzytkownik)
		+ gettery() : ...
		' - sprawdzStatus() : void
		+ wplac(double) : void
		+ wydaj() : void
		+ wezDoZaplaty() : double
		- aktualizujStatus():void
	}

	class "Wniosek" as WNI {
		- id : int
		- nowaData : Date
		- klient : Klient
		- wypozyczenie : Wypozyczenie
		- status : WniosekStatus
		+ rozpatrz(boolean) : void
		+ rozpatrz(Date) : void
		+ wezId() : int
		+ wezNowaDate() : Date
		+ wezKlienta() : Klient
		+ wezWypozyczenie() : Wypozyczenie
		+ wezStatus() : WniosekStatus
		+ Wniosek(Date, Klient, Wypozyczenie)
	}

	class "Zlecenie" as ZLE {
		- id : int
		- status : ZlecenieStatus
		- sprzet : Sprzet
		+ Zlecenie(ZlecenieStatus, Sprzet)
		+ wezId():int
		+ wezStatus():ZlecenieStatus
		+ wezSprzet():Sprzet
	}

SUZY .up.> BAD:<<zmienia>>
SKAT .up.> BAD:<<zmienia>>
SPLA .left.> BAD:<<zmienia>>
SWYP .right.> BAD:<<zmienia>>
SWNI .down.> BAD:<<zmienia>>
SWYD .down.> BAD:<<zmienia>>

SUZY ..> UZY:<<tworzy,zmienia>>
SKAT ..> ETY:<<tworzy,zmienia>>
SKAT ..> KAT:<<twotzy,zmienia>>
SKAT ..> SPR:<<tworzy,zmienia>>
SPLA ..> PLA:<<tworzy,zmienia>>
SWYP ..> WYP:<<tworzy,zmienia>>
SWYD ..> ZLE:<<tworzy,zmienia>>
SWNI .right.> WNI:<<tworzy,zmienia>>

@enduml